integration_tests/codegen_fail/fail/union/trait_with_attr_on_method.stderr
warning: field is never read: `enum_path`
   --> $DIR/mod.rs:282:5
    |
282 |     pub enum_path: Option<TokenStream>,
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: field is never read: `span`
   --> $DIR/mod.rs:296:5
    |
296 |     pub span: Span,
    |     ^^^^^^^^^^^^^^

warning: 2 warnings emitted

error: GraphQL union cannot use #[graphql(with = ...)] attribute on a trait method
 --> $DIR/trait_with_attr_on_method.rs:5:15
  |
5 |     #[graphql(with = something)]
  |               ^^^^
  |
  = note: https://spec.graphql.org/June2018/#sec-Unions
  = note: instead use #[graphql(ignore)] on the method with #[graphql_union(on ... = ...)] on the trait itself
